# slurmq

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  release-please-config.json  typos.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  copyright.yml  docs.yml  release.yml  security.yml
docs/: conventional-commits.md  index.md
docs/assets/: theme.css
docs/commands/: check.md  config.md  efficiency.md  index.md  monitor.md  report.md  stats.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/recipes/: common.md  cron.md  index.md  scripting.md
docs/reference/: api.md  config-file.md  env-vars.md  exit-codes.md  index.md
docs/style/: best-practices.md  guide.md  index.md  reference.md
scripts/: add_copyright.sh
src/slurmq/: __init__.py  __main__.py
src/slurmq/cli/: main.py
src/slurmq/cli/commands/: __init__.py  check.py  config.py  efficiency.py  monitor.py  report.py  stats.py
src/slurmq/core/: __init__.py  config.py  models.py  quota.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_check.py  test_config.py  test_config_validate.py  test_efficiency.py  test_grace_period.py  test_monitor.py  test_quiet_mode.py  test_report.py  test_stats.py
tests/core/: __init__.py  test_config.py  test_config_system.py  test_quota.py  test_sacct_cmd.py
tests/utils/: __init__.py
